apps/on-prem/user-apps/media/media_resources/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ingress-stripprefix
  namespace: media

spec:
  stripPrefix:
    prefixes:
      - /qbittorrent
