apps/on-prem/user-apps/media/media_resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: media-ingress-stripprefix@kubernetescrd
spec:
  tls:
    - hosts:
      - media.binarybraids.com
  rules:
  - host: media.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /sonarr
        backend:
          service:
            name: sonarr-service
            port: 
              number: 8989 
  - host: media.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /qbittorrent
        backend:
          service:
            name: qbittorrent-service
            port: 
              number: 8080
  - host: media.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /radarr
        backend:
          service:
            name: radarr-service
            port: 
              number: 7878
  - host: media.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /prowlarr
        backend:
          service:
            name: prowlarr-service
            port: 
              number: 9696
  - host: media.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /bazarr
        backend:
          service:
            name: bazarr-service
            port: 
              number: 6767
  - host: media.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /readarr
        backend:
          service:
            name: readarr-service
            port: 
              number: 8787
