apps/on-prem/user-apps/media/media_resources/qbittorrent_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-ingress
  namespace: media
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
      - media.binarybraids.com
  rules:
  - host: media.binarybraids.com
    http:
      paths:
      - pathType: Prefix
        path: /qbittorrent(/|$)(.*)
        backend:
          service:
            name: qbittorrent-service
            port: 
              number: 8080
